create password entry form for administrator

--- a/app/views/admin_pages/adm_login.html.erb
+++ b/app/views/admin_pages/adm_login.html.erb
@@ -1,5 +1,6 @@
 <h1>AdminPages#adm_login</h1>
 <p>Find me in app/views/admin_pages/adm_login.html.erb</p>
-<%= form_tag("/adm_login", method:"post", enforce_utf8:true) do |f| %>
-
+<%= form_tag(admin_pages_adm_login_path, method:"post", enforce_utf8:true) do |f| %>
+    Administratorkennwort: <%= password_field_tag 'admpwd', nil, size:32, maxlength: 32, class: 'admentry' %><br>
+    <%= submit_tag 'LOGIN', value: 'Werde Administrator', class: 'admbutton', name: 'Gurkensalat' %>
 <% end %>
