--- a/app/assets/stylesheets/tamsin.css.scss
+++ b/app/assets/stylesheets/tamsin.css.scss
@@ -20,3 +20,13 @@
 .navlink-current {
     @include navlink-common(#b44281)
 }
+
+.alert {
+    padding: 3px 0 3px 2px;
+}
+
+.alert-error {
+    background: #9b5ba0;
+    color: white;
+    font-weight: bold;
+}
