handle admin session (simplistic)

--- a/app/assets/stylesheets/tamsin.css.scss
+++ b/app/assets/stylesheets/tamsin.css.scss
@@ -30,3 +30,13 @@
     color: white;
     font-weight: bold;
 }
+
+.admlink {
+    background: #debbfd;
+    border: solid  4px #19829f;
+    padding: 4px;
+}
+
+.adm_footer_area {
+    padding-top: 24px;
+}
