--- a/app/views/admin_pages/adm_login.html.erb
+++ b/app/views/admin_pages/adm_login.html.erb
@@ -1,3 +1,4 @@
+<% provide :pagename, :AdmLogin %>
 <h1>AdminPages#adm_login</h1>
 <p>Find me in app/views/admin_pages/adm_login.html.erb</p>
 <%= form_tag(admin_pages_adm_login_path, method:"post", enforce_utf8:true) do |f| %>
