add html upload dialogue

--- a/app/views/admin_pages/home.html.erb
+++ b/app/views/admin_pages/home.html.erb
@@ -1,4 +1,11 @@
 <% provide :pagename, 'AdmHome' %>
 <div>
 This is in admin_pages/home
+
+<%= form_tag({action: 'adm_upload_selected'}, multipart: true) do |f| %>
+    HTML Upload: <%= file_field_tag :upload, {accept: 'text/html', class: 'adm_upload'} %>
+    <%= hidden_field_tag :upload_cache %><br>
+    <%= submit_tag 'UPLOAD' %>
+<% end %>
+
 </div>
